# Generated by Django 5.0.6 on 2024-06-17 01:15

import datetime
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Sala",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("idSala", models.TextField(db_index=True, unique=True)),
                ("capacidade", models.IntegerField(default=0)),
            ],
        ),
        migrations.CreateModel(
            name="Disciplina",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "nome",
                    models.TextField(default="", verbose_name="Nome da disciplina"),
                ),
                ("cargaHoraria", models.IntegerField(default=0)),
                (
                    "dependencia",
                    models.ForeignKey(
                        blank=True,
                        null=True,
                        on_delete=django.db.models.deletion.SET_NULL,
                        to="gestaoacademica.disciplina",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Aluno",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("nome", models.TextField(verbose_name="Nome do Aluno")),
                ("sobrenome", models.TextField(verbose_name="Sobrenome do Aluno")),
                (
                    "prontuario",
                    models.TextField(
                        db_index=True,
                        default="AP",
                        unique=True,
                        verbose_name="Registro do Aluno",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True, db_index=True)),
                ("updated_at", models.DateTimeField(auto_now=True, db_index=True)),
                (
                    "user",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
                (
                    "disciplinas_concluidas",
                    models.ManyToManyField(to="gestaoacademica.disciplina"),
                ),
            ],
            options={
                "verbose_name": "Aluno da Insituição",
            },
        ),
        migrations.CreateModel(
            name="OfertaDisciplina",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "diaDaSemana",
                    models.TextField(
                        choices=[
                            ("DOMINGO", "Domingo"),
                            ("SEGUNDA", "Segunda-feira"),
                            ("TERCA", "Terça-feira"),
                            ("QUARTA", "Quarta-feira"),
                            ("QUINTA", "Quinta-feira"),
                            ("SEXTA", "Sexta-feira"),
                            ("SABADO", "Sábado"),
                        ],
                        default="DOMINGO",
                    ),
                ),
                (
                    "horarioInicio",
                    models.TimeField(default=datetime.time(20, 21, 43, 77942)),
                ),
                (
                    "horarioFim",
                    models.TimeField(default=datetime.time(20, 21, 43, 77942)),
                ),
                (
                    "disciplina",
                    models.ForeignKey(
                        null=True,
                        on_delete=django.db.models.deletion.CASCADE,
                        to="gestaoacademica.disciplina",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="ListaDeEspera",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("aluno", models.ManyToManyField(to="gestaoacademica.aluno")),
                (
                    "ofertaDisciplina",
                    models.ForeignKey(
                        null=True,
                        on_delete=django.db.models.deletion.CASCADE,
                        to="gestaoacademica.ofertadisciplina",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Participacao",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                (
                    "aluno",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        to="gestaoacademica.aluno",
                    ),
                ),
                (
                    "ofertaDisciplina",
                    models.ForeignKey(
                        null=True,
                        on_delete=django.db.models.deletion.CASCADE,
                        to="gestaoacademica.ofertadisciplina",
                    ),
                ),
            ],
        ),
        migrations.CreateModel(
            name="Professor",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("nome", models.TextField()),
                ("sobrenome", models.TextField(verbose_name="Sobrenome do Aluno")),
                (
                    "user",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
        ),
        migrations.AddField(
            model_name="ofertadisciplina",
            name="professor",
            field=models.ForeignKey(
                null=True,
                on_delete=django.db.models.deletion.CASCADE,
                to="gestaoacademica.professor",
            ),
        ),
        migrations.AddField(
            model_name="ofertadisciplina",
            name="sala",
            field=models.ForeignKey(
                null=True,
                on_delete=django.db.models.deletion.SET_NULL,
                to="gestaoacademica.sala",
            ),
        ),
        migrations.CreateModel(
            name="Turma",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("nome", models.TextField()),
                ("aluno", models.ManyToManyField(to="gestaoacademica.aluno")),
            ],
        ),
        migrations.AddField(
            model_name="ofertadisciplina",
            name="turma",
            field=models.ForeignKey(
                null=True,
                on_delete=django.db.models.deletion.CASCADE,
                to="gestaoacademica.turma",
            ),
        ),
    ]
